see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

23-Nov-2010 Jean-Marie Simonet
 $ Deleting unused strings. Reordering strings in some ini files.
 # [#23447] image truncated by row height. Thanks Andrea.

22-Nov-2010 Christophe Demko
 #$ Fix a language loading file
 # [#23434] Installer outputs closing tag at the end of configuration.php (Ian MacLennan)

22-Nov-2010 Jean-Marie Simonet
 # [#23368] Missing styles for unpublished items in the list views. Thanks Elin and Bill.
 # [#23276] Fix left edge of header lines. Thanks Viet and Michael.

21-Nov-2010 Mark Dexter
# Sample data fixes (Elin Waring)

21-Nov-2010 Christophe Demko
 # $ Translating the label field instead of the name field in JLIB_FORM_VALIDATE_FIELD_INVALID error
 # [#23409] Category Icon on Components Menu
 # [#23278] media_manager from JToolbarHelper throws javascript errors

21-Nov-2010 Jean-Marie Simonet
 # [#23361] default template in component.php view always in use

20-Nov-2010 Ian MacLennan
 # [#22962] Mootools Library Upgrade

20-Nov-2010 Jean-Marie Simonet
 $ Updating xx-XX.com_media.ini to [#23370]
 # [#23392] Use Article settings missing from some menu items. Thanks Bill.
 #$ [#23416] Adding descriptions in the images modal
 # [#23413] Module Article categories. Thanks Mark
 # [#23303] Newfeed layouts should show unpublished feeds if logged in. Thanks Mark.
 
20-Nov-2010 Mark Dexter
 # [#23380] Category manager allows deleting a category that has items assigned to it
 # [#21581] mod_articles_category Fixes. (Omar Ramos)

20-Nov-2010 Christophe Demko
 # [#23355] Access level special now manager and above (Elin Waring)